# ownrIO

./: .gitignore  CMakeLists.txt  Dataset.py  README.md  carun.sh  compile_run.sh  io_utils.h  main.cpp  ownrecord.cpp  ownrecord.h  read.py  roll_opt.pyx  test.cpp  test.py  write.py
